Added configuration options

--- a/Wox.Plugin.Kitty/Wox.Plugin.Kitty.csproj
+++ b/Wox.Plugin.Kitty/Wox.Plugin.Kitty.csproj
@@ -56,6 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="path.conf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="plugin.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
