--- a/Wox.Plugin.Kitty/Wox.Plugin.Kitty.csproj
+++ b/Wox.Plugin.Kitty/Wox.Plugin.Kitty.csproj
@@ -62,6 +62,7 @@
     <None Include="plugin.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
